[tool.poetry]
name = "workflow"
version = "0.1.0"
description = ""
authors = ["Tejas Mehta <tejas.mehta@walkerchandiok.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
fastapi = {extras = ["standard"], version = "^0.115.13"}
uvicorn = "^0.34.3"
pydantic = "^2.11.7"
sqlmodel = "^0.0.24"
langchain = "^0.3.26"
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
